hphp/hack/test/typecheck/void_is_type_of_null/void_usage_5.php.exp
File "void_usage_5.php", line 12, characters 3-15:
  array<^(string | void)>
File "void_usage_5.php", line 14, characters 9-10:
You are using a sketchy null check on a primitive type ...
Use $x === null instead (Typing[4089])
