hphp/hack/test/typecheck/void_is_type_of_null/void_usage_5.php
<?hh // strict

function test(bool $b): void {
  $arr = array_map(
    $x ==> {
      if ($b) {
        return $x;
      }
    },
    array('test'),
  );
  hh_show($arr);
  foreach ($arr as $x) {
    if ($x) {
    }
  }
}
